--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "pg": "^8.15.6",
-    "qrcode": "^1.5.4"
+    "qrcode": "^1.5.4",
+    "redis": "^5.5.6"
   }
 }
