--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.15.6",
     "qrcode": "^1.5.4",
-    "redis": "^5.5.6"
+    "redis": "^5.5.6",
+    "uuid": "^11.1.0"
   }
 }
