--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@pdf-lib/fontkit": "^1.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "fontkit": "^2.0.4",
     "jsonwebtoken": "^9.0.2",
+    "pdf-lib": "^1.17.1",
     "pg": "^8.15.6",
     "qrcode": "^1.5.4",
     "redis": "^5.5.6",
